# RustPrimeChecker

./: Cargo.toml
src/: main.rs
