[package]
name = "rustprimechecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.0"
num-bigint = "0.4"
num-traits = "0.2.17"
num-integer = "0.1.45"

[profile.release]
opt-level = 3
debug = false
